<resources>
    <string name="app_name">WebAusleser</string>
    <string name="service_name">WebService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="underlined"><u>%1$s</u></string>
    <string name="navTitleSources">Quellen</string>
    <string name="actionsFor">Aktionen für %1$s</string>
    <string name="stepsFor">Schritte für %1$s</string>
    <string name="paramsFor">Parameter für %1$s</string>
    <string name="thens">Dann-Schritte</string>
    <string name="elses">Sonst-Schritte</string>
    <string name="oneForAnother">%1$s für %2$s</string>
    <string name="newFunction">Funktion hinzufügen</string>
    <string name="asFunction">(neue Funktion)</string>
    <string name="toFunction">(in Funktion einfügen)</string>
    <string name="renameFunction">Funktion umbenennen</string>
    <string name="copyFunction">Funktion kopieren</string>
    <string name="newSource">Quelle hinzufügen</string>
    <string name="renameSource">Quelle umbenennen</string>
    <string name="copySource">Quelle kopieren</string>
    <string name="itemCopy">%1$s - Kopie</string>
    <string name="itemNextCopy">%1$s - Kopie (%2$s)</string>
    <string name="newAction">Aktion hinzufügen</string>
    <string name="renameAction">Aktion umbenennen</string>
    <string name="moveAction">Aktion verschieben - Ziel wählen</string>
    <string name="copyAction">Aktion kopieren - Ziel wählen</string>
    <string name="newStep">Schritt hinzufügen</string>
    <string name="renameStep">Schritt umbenennen</string>
    <string name="copyStep">Schritt kopieren - Ziel wählen</string>
    <string name="moveStep">Schritt verschieben - Ziel wählen</string>
    <string name="newParameter">Parameter für %1$s</string>
    <string name="newList">(neue Liste)</string>
    <string name="newVariable">(neue Variable)</string>
    <string name="inputNewList">Name der neuen Liste:</string>
    <string name="inputNewVariable">Name der neuen Variablen:</string>
    <string name="fixedValue">(fester Wert)</string>
    <string name="inputFixedValue">Bestimmter Wert:</string>
    <string name="inputName">Name:</string>
    <string name="insert">Einfügen</string>
    <string name="insertLast">(zuletzt)</string>
    <string name="ok">OK</string>
    <string name="back">Zurück</string>
    <string name="next">Weiter</string>
    <string name="finish">Fertig stellen</string>
    <string name="cancel">Abbrechen</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="delete">Löschen</string>
    <string name="rename">Umbenennen</string>
    <string name="move">Verschieben</string>
    <string name="copy">Kopieren</string>
    <string name="selectAll">Alles markieren</string>
    <string name="sureFunction">"Möchten Sie die Funktion '%1$s' inklusive deren Schritte wirklich unwiderruflich löschen?"</string>
    <string name="sureFunctions">"Möchten Sie die ausgewählten Funktionen inklusive deren Schritte wirklich unwiderruflich löschen?"</string>
    <string name="sureSource">"Möchten Sie die Quelle '%1$s' inklusive deren Aktionen wirklich unwiderruflich löschen?"</string>
    <string name="sureSources">"Möchten Sie die ausgewählten Quellen inklusive deren Aktionen wirklich unwiderruflich löschen?"</string>
    <string name="sureAction">"Möchten Sie die Aktion '%1$s' inklusive deren Schritte wirklich unwiderruflich löschen?"</string>
    <string name="sureActions">"Möchten Sie die ausgewählten Aktionen inklusive deren Schritte wirklich unwiderruflich löschen?"</string>
    <string name="sureStep">"Möchten Sie den Schritt '%1$s' wirklich unwiderruflich löschen?"</string>
    <string name="sureSteps">"Möchten Sie die ausgewählten Schritte wirklich unwiderruflich löschen?"</string>
    <string name="setParam1">"'Zuweisen' - Quelle"</string>
    <string name="setParam2">"'Zuweisen' - Ziel"</string>
    <string name="addParam1">"'Addieren' - Quelle"</string>
    <string name="addParam2">"'Addieren' - Summand"</string>
    <string name="addParam3">"'Addieren' - Ziel"</string>
    <string name="subtractParam1">"'Subtrahieren' - Quelle"</string>
    <string name="subtractParam2">"'Subtrahieren' - Subtrahend"</string>
    <string name="subtractParam3">"'Subtrahieren' - Ziel"</string>
    <string name="multiplyParam1">"'Multiplizieren' - Quelle"</string>
    <string name="multiplyParam2">"'Multiplizieren' - Faktor"</string>
    <string name="multiplyParam3">"'Multiplizieren' - Ziel"</string>
    <string name="divideParam1">"'Dividieren' - Quelle"</string>
    <string name="divideParam2">"'Dividieren' - Divisor"</string>
    <string name="divideParam3">"'Dividieren' - Ziel"</string>
    <string name="incrParam1">"'Inkrementieren' - Variable"</string>
    <string name="decrParam1">"'Dekrementieren' - Variable"</string>
    <string name="substringParam1">"'Extrahieren' - Quelle"</string>
    <string name="substringParam2">"'Extrahieren' - Startposition"</string>
    <string name="substringParam3">"'Extrahieren' - Länge"</string>
    <string name="substringParam4">"'Extrahieren' - Ziel"</string>
    <string name="trimParam1">"'Glätten' - Quelle"</string>
    <string name="trimParam2">"'Glätten' - Ziel"</string>
    <string name="ltrimParam1">"'Linksglätten' - Quelle"</string>
    <string name="ltrimParam2">"'Linksglätten' - Ziel"</string>
    <string name="rtrimParam1">"'Rechtsglätten' - Quelle"</string>
    <string name="rtrimParam2">"'Rechtsglätten' - Ziel"</string>
    <string name="replaceParam1">"'Ersetzen' - Quelle"</string>
    <string name="replaceParam2">"'Ersetzen' - Suchen"</string>
    <string name="replaceParam3">"'Ersetzen' - Ersetzen"</string>
    <string name="replaceParam4">"'Ersetzen' - Ziel"</string>
    <string name="putlistParam1">"'Liste ergänzen' - Liste"</string>
    <string name="putlistParam2">"'Liste ergänzen' - Element"</string>
    <string name="foreachParam1">"'Listenschleife' - Liste"</string>
    <string name="foreachParam2">"'Listenschleife' - Elementvariable"</string>
    <string name="getlistParam1">"'Listenelement holen' - Liste"</string>
    <string name="getlistParam2">"'Listenelement holen' - Position"</string>
    <string name="getlistParam3">"'Listenelement holen' - Ziel"</string>
    <string name="remlistParam1">"'Listenelement löschen' - Liste"</string>
    <string name="remlistParam2">"'Listenelement löschen' - Position"</string>
    <string name="ifParam1">"'Bedingung' - Operator"</string>
    <string name="ifParam2">"'Bedingung' - Wert 1"</string>
    <string name="ifParam3">"'Bedingung' - Wert 2"</string>
    <string name="loopParam1">"'Wiederholung' - Typ"</string>
    <string name="loopParam2">"'Wiederholung' - Bedingungsoperator"</string>
    <string name="loopParam3">"'Wiederholung' - Bedingungswert 1"</string>
    <string name="loopParam4">"'Wiederholung' - Bedingungswert 2"</string>
    <string name="forParam1">"'Nummernschleife' - Zählvariable"</string>
    <string name="forParam2">"'Nummernschleife' - Von"</string>
    <string name="forParam3">"'Nummernschleife' - Bis"</string>
    <string name="splitParam1">"'Splitten' - Quelle"</string>
    <string name="splitParam2">"'Splitten' - Trenner"</string>
    <string name="splitParam3">"'Splitten' - Zielliste"</string>
    <string name="concatParam1">"'Verketten' - Linksquelle"</string>
    <string name="concatParam2">"'Verketten' - Rechtsquelle"</string>
    <string name="concatParam3">"'Verketten' - Ziel"</string>
    <string name="leftParam1">"'Linkstext' - Quelle"</string>
    <string name="leftParam2">"'Linkstext' - Zeichenanzahl"</string>
    <string name="leftParam3">"'Linkstext' - Ziel"</string>
    <string name="rightParam1">"'Rechtstext' - Quelle"</string>
    <string name="rightParam2">"'Rechtstext' - Zeichenanzahl"</string>
    <string name="rightParam3">"'Rechtstext' - Ziel"</string>
    <string name="instrParam1">"'Vorwärtssuche' - Quelle"</string>
    <string name="instrParam2">"'Vorwärtssuche' - Startposition"</string>
    <string name="instrParam3">"'Vorwärtssuche' - Suchtext"</string>
    <string name="instrParam4">"'Vorwärtssuche' - Ziel"</string>
    <string name="lenParam1">"'Länge' - Quelle"</string>
    <string name="lenParam2">"'Länge' - Ziel"</string>
    <string name="instrrevParam1">"'Rückwärtssuche' - Quelle"</string>
    <string name="instrrevParam2">"'Rückwärtssuche' - Startposition"</string>
    <string name="instrrevParam3">"'Rückwärtssuche' - Suchtext"</string>
    <string name="instrrevParam4">"'Rückwärtssuche' - Ziel"</string>
    <string name="httpgetParam1">"'Get-Download' - URL"</string>
    <string name="httpgetParam2">"'Get-Download' - Modus"</string>
    <string name="httpgetParam3">"'Get-Download' - Ziel"</string>
    <string name="httppostParam1">"'Post-Download' - URL"</string>
    <string name="httppostParam2">"'Post-Download' - Modus"</string>
    <string name="httppostParam3">"'Post-Download' - Ziel"</string>
    <string name="execjsParam1">"'Javascript-Befehl' - Befehl"</string>
    <string name="execjsParam2">"'Javascript-Befehl' - Ziel"</string>
    <string name="makemsgParam1">"'Meldung' - Betreff"</string>
    <string name="makemsgParam2">"'Meldung' - Inhalt"</string>
    <string name="makemsgParam3">"'Meldung' - Bild-URL"</string>
    <string name="makemsgParam4">"'Meldung' - Link-URL"</string>
    <string name="reverseParam1">"'Text spiegeln' - Quelle"</string>
    <string name="reverseParam2">"'Text spiegeln' - Ziel"</string>
    <string-array name="ifOperations">
        <item>lt</item>
        <item>gt</item>
        <item>le</item>
        <item>ge</item>
        <item>eq</item>
        <item>ne</item>
        <item>startswith</item>
        <item>nstartswith</item>
        <item>endswith</item>
        <item>nendswith</item>
        <item>contains</item>
        <item>ncontains</item>
        <item>inlist</item>
        <item>ninlist</item>
    </string-array>
    <string-array name="ifOperationsNames">
        <item>kleiner als</item>
        <item>größer als</item>
        <item>kleiner gleich</item>
        <item>größer gleich</item>
        <item>gleich</item>
        <item>nicht gleich</item>
        <item>beginnt mit</item>
        <item>beginnt nicht mit</item>
        <item>endet mit</item>
        <item>endet nicht mit</item>
        <item>enthält</item>
        <item>enthält nicht</item>
        <item>Liste enthält</item>
        <item>Liste enthält nicht</item>
    </string-array>
    <string-array name="builtInSteps">
        <item>set</item>
        <item>add</item>
        <item>subtract</item>
        <item>multiply</item>
        <item>divide</item>
        <item>incr</item>
        <item>decr</item>
        <item>substring</item>
        <item>trim</item>
        <item>ltrim</item>
        <item>rtrim</item>
        <item>replace</item>
        <item>putlist</item>
        <item>foreach</item>
        <item>getlist</item>
        <item>remlist</item>
        <item>if</item>
        <item>loop</item>
        <item>for</item>
        <item>split</item>
        <item>concat</item>
        <item>left</item>
        <item>right</item>
        <item>instr</item>
        <item>len</item>
        <item>instrrev</item>
        <item>httpget</item>
        <item>httppost</item>
        <item>execjs</item>
        <item>makemsg</item>
        <item>reverse</item>
        <item>exitfor</item>
        <item>exitforeach</item>
        <item>exitdoloop</item>
        <item>exitifelse</item>
        <item>end</item>
    </string-array>
</resources>