<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item_rename"
        android:title="@string/rename"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_select_all"
        android:title="@string/selectAll"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_move"
        android:title="@string/move"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_item_copy"
        android:title="@string/copy"
        app:showAsAction="always" />
    <item android:id="@+id/menu_item_delete"
        android:title="@string/delete"
        app:showAsAction="always"/>
</menu>